bug fix - header bar collapse

--- a/app/assets/stylesheets/navbar.css.less
+++ b/app/assets/stylesheets/navbar.css.less
@@ -442,7 +442,7 @@ header
   /* Small Devices, Tablets */
   @media only screen and (min-width : 768px) { }
   /* Medium Devices, Desktops */
- 
+
 
   /* Large Devices, Wide Screens */
   @media only screen and (min-width : 1024px) 
@@ -577,8 +577,18 @@ header
    {
     .container-fluid 
     {
-      padding:0px 10%;
+      padding:0px 5%;
 
     }
    }
+
+  @media only screen and (min-width : 1300px) 
+  {
+    .container-fluid 
+    {
+      padding: 0px 10%;
+    }
+  } 
+
 }
+
